# scnn_experiments

./: .gitignore  LICENSE  README.md  mnist_timing.ipynb  pyproject.toml  setup.py  setup.sh
sbatch_scripts/: big_gpu.sh  bigmem.sh  cpu.sh  gpu.sh  pilanci.sh  timed_cpu.sh  timed_gpu.sh  timed_gpu_cpu.sh
scripts/: extract_table_2_best_params.py  extract_table_3_best_params.py  make_figures_12_13_14.py  make_figures_15_16_17.py  make_figures_1_6.py  make_figures_4_7_8.py  make_figures_5_18_19.py  make_figures_9_10_11.py  make_table_1.py  make_table_2.py  make_table_3.py  plot_experiment.py  run.py  run_experiment_old.py
scripts/exp_configs/: defaults.py  figure_1.py  figure_12.py  figure_15.py  figure_4.py  figure_5.py  figure_9.py  mnist_timing.py  table_1.py  table_2_best_params.pkl  table_2_final.py  table_2_gs.py  table_3_best_params.pkl  table_3_final.py  table_3_gs.py  table_4_cifar.py  table_4_cifar_baselines.py  table_4_mnist.py  test.py
scripts/plot_configs/: constants.py  mnist_timing.py
scripts/plotting_utils/: performance_profile.py
src/scaffold/: datasets.py  line_search.py  methods.py  models.py  prox.py  runners.py  support.py  termination_criteria.py  torch_models.py  uci_names.py
